# Commerce

./: .db.sqlite3.swp  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  TODO.md  db.sqlite3  docker-compose.yml  fixtures.json  initial-data.json  manage.py  pyproject.toml  requirements.txt
auctions/: admin.py  forms.py  models.py  urls.py  views.py
auctions/migrations/: 0001_initial.py  0002_auto_20220627_1444.py  0003_auto_20220627_1448.py  0004_rename_categoryname_category_category_name_and_more.py  0005_rename_category_name_category_name.py  0006_rename_starting_bid_listing_amount_alter_bid_id.py  0007_cart_product_remove_listing_category_and_more.py  0008_alter_comment_user.py  0009_product_category1.py  0010_remove_product_category1_alter_product_category_and_more.py  0011_alter_product_category.py  0012_alter_cart_quantity.py  0013_alter_cart_quantity.py  0014_alter_cart_quantity.py  0015_alter_cart_quantity.py  0016_alter_cart_quantity.py  0017_alter_cart_quantity.py  0018_product_quantity_alter_cart_quantity.py  0019_alter_cart_quantity.py  0020_alter_cart_quantity.py  0021_alter_cart_quantity.py  0022_alter_cart_quantity.py  0023_product_date_alter_cart_quantity_delete_comment.py  0024_remove_product_watchlist_product_wishlists.py  0025_remove_product_wishlists_product_wishlist.py  0026_remove_product_wishlist_product_wishlists.py
auctions/templatetags/: tags.py
commerce/: settings.py  urls.py
commerce_core/: manage.py
commerce_core/auctions/: admin.py  apps.py  (+5 more)
frontend/: package-lock.json  package.json
scripts/: entrypoint.sh
(+87 files in other folders)
